# amap-rectify

./: .gitignore  README.md  pyproject.toml
gcj-rectify/: __init__.py  metadata.txt  plugin.py  server.py
gcj-rectify/app/: config.json  fetch.py  main.py  rectify.py  utils.py
qgis-plugin-amap/: README.md  __init__.py  metadata.txt  plugin.py  server.py  test_async.py  tile.py  utils.py
